fix: overflow-x hidden

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -53,6 +53,7 @@ body {
 	background-color: $mainBackgroundColor;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
 }
 button {
 	border: none;
